- Fixed a performance issue occuring after the Theo Cutscene in The Secret Of Celeste Mountain
- Fixed a bug preventing the In-Game map to work properly in campaigns not using a Merge Chapter Controller
- Fixed a bug displaying an unintended line of text when collecting the Varia Jacket ability
- Fixed a bug allowing the player to grab a Bomb or Mega Bomb during its explosion animation

Version 1.0.67 :
- Changed the default display for the In-Game map progress display from 'off' to 'area map'
- Fixed a bug preventing 3 achievements in The Secret of Celeste Mountain to be awarded correctly
- Fixed a crash when starting a map using a StatsFlag Controller

Version 1.0.66 :
- Added a light source to Leafs
- A manager entity used by other custom entities is no longer automatically added to the scene in vanilla chapters
- Customs actions that should occur when the player die now occur in addition to other mods actions instead of replacing them
- Liquids now use the hurtbox of the player (as they were doing prior to version 1.0.64) to determine if they should kill the player
- Liquids will now consider the player to be inside them (and affect their physics) if the player hurtbox collide with them rather than the whole player hitbox
- Improved performances of the auto-save feature triggering on room transition in campaign using a Merge Chapter Controller whith its mode set to Rooms
- Settings in The Secret of Celeste Mountain are now immediately saved when leaving the Settings menu
- Fixed a bug that could cause the bomb detonation timer to start immediately when a bomb was summoned by the player
- Fixed a bug that could cause a bomb to spawn, but not being picked up when trying to grab a wall and spawn a bomb at the same time
- Fixed a bug saving the current Light Mode instead of the Respawn light mode when returning to the title screen in The Secret of Celeste Mountain